Finalise the dragonsbane potion recipe

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
 
     <body>
-        <h1> Odin Recipes</h1>
+        <h1> Odin Potion Recipes</h1>
+        <a href="./recipes/dragonsbane.html">Dragonsbane recipe</a>
     </body>
 </html>
