--- a/recipes/dragonsbane.html
+++ b/recipes/dragonsbane.html
@@ -20,5 +20,14 @@
             <li>Wyvern Poison</li>
             <li>Animal fat</li>
         </ul>
+
+        <h2>Instructions</h2>
+        <ol>
+            <li>Heat animal fats until solids have melted down into liquid</li>
+            <li>Add the dragon's blood</li>
+            <li>Continue mixing until fats become a deep crimson</li>
+            <li><strong>Slowly</strong> add the wyvern poison</li>
+            <li>Store the potion in a sealed container</li>
+        </ol>
     </body>
 </html>
