Create the Thor's might potion recipe
Recipe link was also added to the index page.

--- a/recipes/dragonsbane.html
+++ b/recipes/dragonsbane.html
@@ -9,7 +9,7 @@
         <h1>Dragonsbane Potion Recipe</h1>
         <a href="../index.html">Homepage</a>
 
-        <p><img src="./dragonsbane.jpg" width="250"></p>
+        <p><img src="./images/dragonsbane.jpg" width="250" alt="An image of a green ptopn styled with dragon horns"></p>
 
         <h2>Dragonsbane potion recipe</h2>
         <p>This oil can coat <strong>a single weapon for 3 uses</strong>, or up to <strong>3 pieces of ammunition can be dipped in the oil for 1 use each</strong>. A dragon that takes damage from a weapon or piece of ammunition covered in the oil takes an additional 6d6 damage from the attack. The oil dries after 1 hour and becomes inert.</p>
