--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
     <body>
         <h1> Odin Potion Recipes</h1>
-        <a href="./recipes/dragonsbane.html">Dragonsbane recipe</a>
+        <ul>
+            <li><a href="./recipes/dragonsbane.html">Dragonsbane recipe</a></li>
+            <li><a href="./recipes/thorsmight.html">Thor's Might recipe</a></li>
+        </ul>
     </body>
 </html>
