Create the Polymorph potion recipe

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <ul>
             <li><a href="./recipes/dragonsbane.html">Dragonsbane recipe</a></li>
             <li><a href="./recipes/thorsmight.html">Thor's Might recipe</a></li>
+            <li><a href="./recipes/polymorph.html">Polymorph Potion recipe</a></li>
         </ul>
     </body>
 </html>
