--- a/recipes/thorsmight.html
+++ b/recipes/thorsmight.html
@@ -6,6 +6,7 @@
     </head>
 
     <body>
+        <a href="../index.html">Homepage</a>
         <h1>Thor's Might Recipe</h1>
         <img src="./images/thorsmight.jpg" width="250" alt="A vial with blue swirling liquid and stone ends adorned with runes">
         <p>A churning mass of a deep blue liquid, shot through with white streaks that remind of lightning. The container which holds this potion always shakes and quivers slightly. After drinking this potion, upon hitting a target with a melee weapon attack lets out thunderous crack that deals an extra 1d6 thunder damage for 1 minute, there is no limit to how often it can be used within this timespan.</p>
