Create stylesheet and add style

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="./styles.css">
     </head>
 
     <body>
         <h1> Odin Potion Recipes</h1>
-        <ul>
+        <ul class="mainpage">
             <li><a href="./recipes/dragonsbane.html">Dragonsbane recipe</a></li>
             <li><a href="./recipes/thorsmight.html">Thor's Might recipe</a></li>
             <li><a href="./recipes/polymorph.html">Polymorph Potion recipe</a></li>
