--- a/recipes/dragonsbane.html
+++ b/recipes/dragonsbane.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Dragonsbane Potion Recipe</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
 
     <body>
@@ -10,9 +11,9 @@
         <h1>Dragonsbane Potion Recipe</h1>
         
 
-        <p><img src="./images/dragonsbane.jpg" width="250" alt="An image of a green ptopn styled with dragon horns"></p>
+        <img src="./images/dragonsbane.jpg" alt="An image of a green potion styled with dragon horns">
 
-        <h2>Dragonsbane potion recipe</h2>
+        <h2>Description</h2>
         <p>This oil can coat <strong>a single weapon for 3 uses</strong>, or up to <strong>3 pieces of ammunition can be dipped in the oil for 1 use each</strong>. A dragon that takes damage from a weapon or piece of ammunition covered in the oil takes an additional 6d6 damage from the attack. The oil dries after 1 hour and becomes inert.</p>
 
         <h2>Ingredients</h2>
