--- a/recipes/polymorph.html
+++ b/recipes/polymorph.html
@@ -3,12 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <title>Polymorph Potion</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
 
     <body>
         <a href="../index.html">Homepage</a>
         <h1>Polymorph Potion recipe</h1>
         <img src="./images/polymorph.jpeg" width="250" alt="A purple liquid inside a potion bottle with a cork top, a spider appears to float in the liquid">
+        <h2>Description</h2>
         <p>An almost clear, pale green potion with a constantly morphing projection of a creature floating within. Drinking this potion allows the drinker to use the Polymorph spell on themselves for 15 minutes without concentration.</p>
 
         <h2>Ingredients</h2>
